完善人工处理任务详情并支持停止订单全部自动化
